k8s/k8/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: online-shop-deployment
  namespace: online-shop
  labels:
    app: online-shop

spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-shop

  template:
    metadata:
      name: online-shop-pod
      namespace: online-shop
      labels:
        app: online-shop

    spec:
      containers:
      - name: online-shop-container
        image: ganeshkhaire14/online_shop_app:latest
        ports:
          - containerPort: 80
