k8s/k8/service.yml
apiVersion: v1
kind: Service

metadata:
  name: online-shop-svc
  namespace: online-shop

spec:
  selector:
    app: online-shop
  ports:
    - protocol: TCP
      port: 80 # service /cluster
      targetPort: 80 # pod / container
