k8s/k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: online-shop-ingress
  namespace: online-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
     paths:
     - pathType: Prefix
       path: /shop
       backend:
         service:
           name: online-shop-svc
           port:
             number: 80
     - pathType: Prefix
       path: /apache
       backend:
         service:
           name: apache-service
           port:
             number: 85
